--- a/web1/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web1/src/app/inventory/product-transfer/product-transfer.component.html
@@ -24,7 +24,11 @@
                                         <mat-label>Search By Product</mat-label>
                                         <mat-select name="selectedProduct" [(ngModel)]="selectedProduct" 
                                             (selectionChange)="getFieldList()" required #selectedProductcontrol>
-                                            <mat-option *ngFor="let prod of prodList   let i = index;"
+                                            <mat-option>
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                </ngx-mat-select-search>
+                                            </mat-option>
+                                            <mat-option *ngFor="let prod of prodList | proditemfilter: searchValue     let i = index;"
                                                 [value]="prod.Name">
                                                 {{prod.Name | uppercase}}
                                             </mat-option>
@@ -62,8 +66,12 @@
                                                 (selectionChange)="getFieldSupportData(i);getBarCodeList(i)"
                                                 editable="true" [required]="spec.Required === 1" #singleSelect>
                                                 <mat-option>
+                                                    <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                    </ngx-mat-select-search>
                                                 </mat-option>
-                                                <mat-option *ngFor="let val of spec.SptFilterData "
+                                                <mat-option>
+                                                </mat-option>
+                                                <mat-option *ngFor="let val of spec.SptFilterData | proditemfilterPurchase : searchValue  "
                                                     [value]="val.TableValue">
                                                     {{val.TableValue}}
                                                 </mat-option>
