--- a/web1/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web1/src/app/inventory/purchase-return/purchase-return.component.html
@@ -16,7 +16,11 @@
                                       <mat-label>Supplier Name</mat-label>
                                       <mat-select name="Supplier" [(ngModel)]="selectedPurchaseMaster.SupplierID" editable="true"
                                         #singleSelect required>
-                                        <mat-option *ngFor="let sup of supplierList  let i = index;" [value]="sup.ID">
+                                        <mat-option>
+                                            <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                            </ngx-mat-select-search>
+                                        </mat-option>
+                                        <mat-option *ngFor="let sup of supplierList | proditemfilter: searchValue   let i = index;" [value]="sup.ID">
                                           {{sup.Name}}
                                         </mat-option>
                                       </mat-select>
@@ -65,7 +69,11 @@
                                         <mat-label>Search By Product</mat-label>
                                         <mat-select name="FieldType" [(ngModel)]="selectedProduct"
                                             (selectionChange)="getFieldList()" required #Typecontrol>
-                                            <mat-option *ngFor="let prod of prodList   let i = index;"
+                                            <mat-option>
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                </ngx-mat-select-search>
+                                            </mat-option>
+                                            <mat-option *ngFor="let prod of prodList  | proditemfilter: searchValue    let i = index;"
                                                 [value]="prod.Name">
                                                 {{prod.Name | uppercase}}
                                             </mat-option>
@@ -103,8 +111,12 @@
                                                 (selectionChange)="getFieldSupportData(i);getBarCodeList(i)"
                                                 editable="true" [required]="spec.Required === 1" #singleSelect>
                                                 <mat-option>
+                                                    <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                    </ngx-mat-select-search>
                                                 </mat-option>
-                                                <mat-option *ngFor="let val of spec.SptFilterData "
+                                                <mat-option>
+                                                </mat-option>
+                                                <mat-option *ngFor="let val of spec.SptFilterData  | proditemfilterPurchase: searchValue  "
                                                     [value]="val.TableValue">
                                                     {{val.TableValue}}
                                                 </mat-option>
