--- a/web1/src/app/product/product-master/product-master.component.html
+++ b/web1/src/app/product/product-master/product-master.component.html
@@ -19,7 +19,11 @@
                                         <mat-select name="FieldType" [(ngModel)]="selectedProduct"
                                             (selectionChange)="getFieldList()" required #Typecontrol
                                             appAutoFoucsDirectives>
-                                            <mat-option *ngFor="let prod of prodList   let i = index;"
+                                            <mat-option>
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                </ngx-mat-select-search>
+                                            </mat-option>
+                                            <mat-option *ngFor="let prod of prodList  | prodtypenamefilter: searchValue    let i = index;"
                                                 [value]="prod.Name">
                                                 {{prod.Name | uppercase}}
                                             </mat-option>
@@ -37,7 +41,11 @@
                                         <mat-select name="{{spec.FieldName}}" [(ngModel)]="spec.SelectedValue"
                                             (selectionChange)="getFieldSupportData(i)" editable="true"
                                             [required]="spec.Required === 1" #singleSelect>
-                                            <mat-option *ngFor="let val of spec.SptFilterData   let i = index;"
+                                            <mat-option>
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                </ngx-mat-select-search>
+                                            </mat-option>
+                                            <mat-option *ngFor="let val of spec.SptFilterData  | prodmasteritemfilter: searchValue  let i = index;"
                                                 [value]="val.TableValue">
                                                 {{val.TableValue}}
                                             </mat-option>
