--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1332,7 +1332,7 @@
                         <td>{{v.InvoiceNo}}</td> -->
                         <td>{{v.ProductName}}</td>
                         <td>{{v.Quantity}}</td>
-                        <td>{{(v.Option !== 'undefined' && v.Option !== 'null')? v.Option: ''}}</td>
+                        <td>{{(v.Optionsss !== 'undefined' && v.Optionsss !== 'null')? v.Optionsss: ''}}</td>
                         <!-- <td> {{(v.FitterStatus !== 'initiate')? v.FitterStatus: ''}}</td> -->
                         <td>
                             <select  [disabled]="v.FitterStatus !== 'initiate'"  [ngClass]="{'borderLens': v.ProductTypeName === 'LENS'}" class="inputselectWidth"
