--- a/web1/src/app/sale/commission/commission.component.html
+++ b/web1/src/app/sale/commission/commission.component.html
@@ -83,6 +83,7 @@
                                             <th>Payment Status</th>
                                             <th>Commission Amount</th>
                                             <th>Sales Person</th>
+                                            <th>Shop Name</th>
                                         </tr>
                                     </thead>
                                     <tbody class="text-center">
@@ -103,6 +104,9 @@
                                             <td>{{item.PaymentStatus}}</td>
                                             <td>{{item.CommissionAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                             <td>{{item.PayeeName}}</td>
+                                            <td>{{item.ShopName}}<span [style.color]="'blue'"
+                                                *ngIf="item.AreaName != 'null'">({{item.AreaName}})</span>
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
