--- a/web1/src/app/sale/commission/commission.component.html
+++ b/web1/src/app/sale/commission/commission.component.html
@@ -81,6 +81,8 @@
                                             <th>Bill Date</th>
                                             <th>Bill Amount</th>
                                             <th>Payment Status</th>
+                                            <th>Brand Commission</th>
+                                            <th>NonBrand Commission</th>
                                             <th>Commission Amount</th>
                                             <th>Sales Person</th>
                                             <th>Shop Name</th>
@@ -102,6 +104,8 @@
                                             <td>{{item.BillDate}}</td>
                                             <td>{{item.BillAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                             <td>{{item.PaymentStatus}}</td>
+                                            <td>{{item.BrandedCommissionAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
+                                            <td>{{item.NonBrandedCommissionAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                             <td>{{item.CommissionAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                             <td>{{item.PayeeName}}</td>
                                             <td>{{item.ShopName}}<span [style.color]="'blue'"
