--- a/web1/src/app/po/fitter-invoice/fitter-invoice.component.html
+++ b/web1/src/app/po/fitter-invoice/fitter-invoice.component.html
@@ -99,7 +99,7 @@
                                                 <td>{{dateFormat(f.InvoiceDate)}}</td>
                                                 <td>{{f.ProductName}}</td>
                                                 <td>{{f.LensType}}</td>
-                                                <td>{{(f.Option !== 'undefined')? f.Option: ''}}</td>
+                                                <td>{{(f.Optionsss !== 'undefined')? f.Optionsss: ''}}</td>
                                                 <td>{{f.FitterCost | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                 <td>{{f.Quantity}}</td>
                                                 <td>{{f.SubTotal}}</td>
