--- a/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
+++ b/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
@@ -55,8 +55,12 @@
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>Supplier Name</mat-label>
                                             <mat-select name="Supplier" editable="true" [(ngModel)]="data1.SupplierID" #singleSelect>
+                                                <mat-option>
+                                                    <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                    </ngx-mat-select-search>
+                                                </mat-option>
                                                 <mat-option [value]="0">All</mat-option>
-                                                <mat-option *ngFor="let sup of supplierList  let i = index;" [value]="sup.ID">
+                                                <mat-option *ngFor="let sup of supplierList | proditemfilter: searchValue  let i = index;" [value]="sup.ID">
                                                     {{sup.Name}}
                                                 </mat-option>
                                             </mat-select>
@@ -88,8 +92,12 @@
                                             <mat-label>Select Product</mat-label>
                                             <mat-select name="FieldType" [(ngModel)]="data1.ProductCategory"
                                                 (selectionChange)="getFieldList()" required #Typecontrol>
+                                                <mat-option>
+                                                    <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                    </ngx-mat-select-search>
+                                                </mat-option>
                                                 <mat-option [value]=0>All</mat-option>
-                                                <mat-option *ngFor="let prod of prodList   let i = index;"
+                                                <mat-option *ngFor="let prod of prodList | proditemfilter: searchValue  let i = index;"
                                                     [value]="prod.ID">
                                                     {{prod.Name | uppercase}}
                                                 </mat-option>
@@ -109,8 +117,10 @@
                                                     (selectionChange)="getFieldSupportData(i)" editable="true"
                                                     [required]="spec.Required === 1" #singleSelect>
                                                     <mat-option>
+                                                        <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                        </ngx-mat-select-search>
                                                     </mat-option>
-                                                    <mat-option *ngFor="let val of spec.SptFilterData "
+                                                    <mat-option *ngFor="let val of spec.SptFilterData | proditemfilterPurchase: searchValue"
                                                         [value]="val.TableValue">
                                                         {{val.TableValue}}
                                                     </mat-option>
