--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -39,7 +39,7 @@
                   </div>
                 </div>
                 <div *ngIf="addBillingSearch" [routerLink]="['/sale/billing',0,0]"
-                  class="col-md-1 col-1  order-1 order-md-1" style="width: 40px; padding: 0;">
+                  class="col-md-1 col-1  order-1 order-md-1" style="width: 40px; padding: 0; cursor: pointer;">
                   <mat-icon class="col-white plus_icon me-1">
                     add</mat-icon>
                 </div>
