--- a/web1/src/app/admin/welcome.component.css
+++ b/web1/src/app/admin/welcome.component.css
@@ -5,29 +5,18 @@
 }
 
 .user {
-    padding-top: 2px;
-    margin-top: 5%;
+    padding: 15px;
+    margin-top: 2%;
     font-size: 20px !important;
-    width: 25%;
-    height: 6vh;
-    border-radius: 25px;
-    border: 1px solid rgb(31 58 254);
-    color: #fff;
-    background-color: rgb(0 0 0 / 57%);
+    border: 2px solid rgb(255, 108, 4);
+    color: #081540;
+    background-color: #00000000;
     transition: .7s;
 }
 
-.user:hover {
-    color: rgb(37, 57, 98);
-    background-color: #fff;
-    border: 1px solid rgb(59, 59, 59);
-}
-
 .bgimage {
-    background-image: linear-gradient(130deg, rgb(167 90 46 / 31%) 50%, rgb(167 90 46 / 31%) 50%);
     background-size: 100% 100%;
     width: 100%;
-    height: 100vh;
 }
 
 .logoani {
@@ -38,21 +27,68 @@
     from {
         width: 0%;
     }
+
     to {
         width: 50%;
         ;
     }
 }
+
 .a-ten {
-    border-radius: 50%;
     position: absolute;
-    animation: MoveUpDownTen 2s linear infinite;
-  }
-@keyframes MoveUpDownTen {
-    0%, 100% {
-      left: 22vh;
+}
+
+.conBox {
+    padding: 1%;
+    z-index: 99;
+    text-align: center;
+}
+
+.headline {
+    color: #2a2f4b;
+    font-size: 38px;
+    font-weight: 600;
+    line-height: 37px;
+}
+
+.headContent {
+    font-size: 20px;
+}
+
+.oplogo {
+    width: 70%;
+}
+
+@media (max-width:768px) {
+    .headline {
+        color: #2a2f4b;
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 37px;
     }
-    50% {
-        left: 25vh;
+
+    .headContent {
+        font-size: 15px;
     }
-  }
+
+    .oplogo {
+        width: 70%;
+    }
+}
+
+@media (max-width: 600px) {
+    .headline {
+        color: #2a2f4b;
+        font-size: 22px;
+        font-weight: 600;
+        line-height: 28px;
+    }
+
+    .headContent {
+        font-size: 12px;
+    }
+
+    .oplogo {
+        width: 100%;
+    }
+}
