--- a/web1/src/app/admin/welcome.component.html
+++ b/web1/src/app/admin/welcome.component.html
@@ -1,41 +1,45 @@
-<div class="container-fuild ">
-    <div class="row px-5 bgimage">
-        <div class="row  py-4 ">
-            <div class="col-md-3 ">
-                <img src="assets/images/relinksyslogo.png" alt="" width="50%" class="logoani">
-                <!-- <i class="far fa-registered" style="position: absolute; padding-top: 14%"></i> -->
+<div class="container-fuild " style="background-color: hsla(178, 94%, 72%, 0.961); height: 100vh;">
+    <div class="row">
+        <div class="container ">
+            <div class="row px-5 ">
+                <div class="row mt-0 py-4 ">
+                    <div class="col-md-2 col-12">
+                        <img src="assets/images/relinksyslogo.png" alt="" width="50%" class="logoani">
+                        <!-- <i class="far fa-registered" style="position: absolute; padding-top: 14%"></i> -->
+                    </div>
+                </div>
+                <div class="row mt-0 ">
+                    <div class="col-md-6 col-12 mx-auto text-center"
+                        style="  z-index: 9999; ">
+                        <!-- <i class="far fa-registered" style="position: absolute; padding-top: 49.5%; font-size: 16px;"></i> -->
+                        <img src="assets/images/opticalguru.png" alt=""  class="oplogo" style="padding-top: 0px;">
+                    </div>
+                </div>
+                <div class="row mt-0">
+                    <div class="col-md-12 col-10  conBox mx-auto">
+                        <p class="headline">
+                            Relinksys is a India-based leading software services provider company.
+                        </p>
+
+                        <p class="headContent">
+                            Relinksys provides turnkey solutions for business and technology relocation projects as well
+                            as <br> new facility construction projects.
+                        </p>
+
+                        <button class="user" [routerLink]="['/login']">
+                            Please Enter
+                            <i class="fa fa-arrow-right ps-3 pt-1 a-ten"
+                                style="font-size: 18px; color: rgb(255, 108, 4);" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                    
+                </div>
             </div>
-        </div>
-        <div class="row " style="position: absolute; width: 96% !important;">
-            <div class="col-6  text-left "
-                style="margin-top: 170px; padding: 1%; background-color: rgb(198 198 198 / 46%); max-height: 40vh; z-index: 99;    box-shadow: -8px -1px 29px -2px">
-                <p style="line-height: 37px; ">
-                    <span style="color: #2a2f4b; font-size: 38px; font-weight: 600;">
-                        Relinksys is a India-based leading software services provider company.
-                    </span>
-                    <span style="font-size: 20px;">
-                        Relinksys provides turnkey solutions for business and technology relocation projects as well as
-                        new facility construction
-                        projects. </span>
-                </p>
-                <button class="user" [routerLink]="['/login']">
-                    Please Enter
-                    <i class="fa fa-arrow-right pl-0 pt-1 a-ten" style="font-size: 20px; color: rgb(255, 108, 4);"
-                        aria-hidden="true"></i>
-                </button>
-            </div>
-            <div class="col-6 px-2" style=" height: 80vh; z-index: 9999;">
-                <!-- <i class="far fa-registered" style="position: absolute; padding-top: 49.5%; font-size: 16px;"></i> -->
-                <img src="assets/images/opticalguru.png" alt="" width="100%" style="padding-top: 0px;">
+            <div class="row bg-light " >
+                <div class="col-12 pe-5" style="position: absolute; bottom: 0; text-align: right;">
+                  <p style="font-size: 30px;color: rgb(255, 108, 4); font-weight: 800;">www.relinksys.com</p>
+                </div>
             </div>
         </div>
     </div>
-    <svg style="position: absolute;
-    bottom: 0; " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="rgb(243 113 53)" fill-opacity="0.99"
-            d="M0,160L80,186.7C160,213,320,267,480,256C640,245,800,171,960,138.7C1120,107,1280,117,1360,122.7L1440,128L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
-        </path>
-    </svg>
-    <span
-        style="position: absolute; float: right; margin-top: -50px; width: 99%; display: grid; justify-content: right; font-size: 2rem; letter-spacing: 2px; font-weight: 600; color: blanchedalmond;">www.relinksys.com</span>
 </div>
