--- a/web1/src/app/common/login.component.html
+++ b/web1/src/app/common/login.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="container ">
       <div class="row">
-        <div class="col-md-4 my-5 mx-auto">
+        <div class="col-lg-4 col-md-8 col-12 mt-5 mx-auto">
           <div class="card">
             <form #f="ngForm" (ngSubmit)="onSubmit(content)" class="box">
               <div class="row">
@@ -28,7 +28,7 @@
               <input matInput type="text" name="LoginName" placeholder="LoginName" [(ngModel)]="data.LoginName" required>
               <div>
               <input #x  matInput type="password" name="Password" placeholder="Password" [(ngModel)]="data.Password"required>
-              <mat-icon class="key mt-1"  (click)="x.type = x.type=='password'?'text':'password'"  matSuffix>vpn_key</mat-icon>
+              <mat-icon class="key mt-1"   (click)="x.type = x.type=='password'?'text':'password'"  matSuffix>vpn_key</mat-icon>
             </div>
               <a class="forgot text-light" href="#">Forgot password?</a>
               <br>
