--- a/web1/src/app/company-payment/payment/payment.component.html
+++ b/web1/src/app/company-payment/payment/payment.component.html
@@ -30,7 +30,11 @@
                                         <mat-label>Payee Name</mat-label>
                                         <mat-select name="PayeeID" [(ngModel)]=" data.CustomerID"
                                             (selectionChange)="getInvoicePayment(data.PaymentType,data.PayeeName)">
-                                            <mat-option [value]="s.ID" *ngFor="let s of payeeList ">
+                                            <mat-option>
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                </ngx-mat-select-search>
+                                            </mat-option>
+                                            <mat-option [value]="s.ID" *ngFor="let s of payeeList | paymentnamefilter: searchValue ">
                                                 {{s.Name}}
                                                 <span style="float: right;"
                                                     *ngIf="s.MobileNo1 != 'null'">{{s.MobileNo1}}</span>
