--- a/web1/src/app/po/purchase-convert/purchase-convert.component.html
+++ b/web1/src/app/po/purchase-convert/purchase-convert.component.html
@@ -29,7 +29,11 @@
                                         <mat-select name="supplier" [(ngModel)]="PurchaseMaster.SupplierID"
                                             [ngModelOptions]="{standalone: true}">
                                             <!-- <mat-option [value]=0>All</mat-option> -->
-                                            <mat-option *ngFor="let s of supplierList  let i = index;" value="{{s.ID}}"
+                                            <mat-option>
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                </ngx-mat-select-search>
+                                            </mat-option>
+                                            <mat-option *ngFor="let s of supplierList | ponamefilter: searchValue  let i = index;" value="{{s.ID}}"
                                                 required>
                                                 {{s.Name}}
                                             </mat-option>
