--- a/web1/src/app/po/supplier-po-list/supplier-po-list.component.html
+++ b/web1/src/app/po/supplier-po-list/supplier-po-list.component.html
@@ -28,8 +28,12 @@
                                         <mat-label>Select Supplier</mat-label>
                                         <mat-select name="supplier" [(ngModel)]="data.SupplierID"
                                             [ngModelOptions]="{standalone: true}">
+                                            <mat-option>
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                </ngx-mat-select-search>
+                                            </mat-option>
                                             <mat-option [value]=0>All</mat-option>
-                                            <mat-option *ngFor="let s of supplierList  let i = index;" value="{{s.ID}}"
+                                            <mat-option *ngFor="let s of supplierList | ponamefilter: searchValue  let i = index;" value="{{s.ID}}"
                                                 required>
                                                 {{s.Name}}
                                             </mat-option>
