--- a/web1/src/app/po/supplier-po/supplier-po.component.html
+++ b/web1/src/app/po/supplier-po/supplier-po.component.html
@@ -29,8 +29,13 @@
                                         <mat-label>Select Supplier</mat-label>
                                         <mat-select name="supplier" [(ngModel)]="supplierID"
                                             [ngModelOptions]="{standalone: true}">
+                                            
+                                            <mat-option>
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                </ngx-mat-select-search>
+                                            </mat-option>
                                             <mat-option value="All">All</mat-option>
-                                            <mat-option *ngFor="let s of supplierList  let i = index;" value="{{s.ID}}">
+                                            <mat-option *ngFor="let s of supplierList | ponamefilter: searchValue   let i = index;" value="{{s.ID}}">
                                                 {{s.Name}}
                                             </mat-option>
                                         </mat-select>
@@ -203,7 +208,11 @@
                     <mat-label>Select Supplier</mat-label>
                     <mat-select name="supplier" [(ngModel)]="supplierID" [ngModelOptions]="{standalone: true}">
                         <!-- <mat-option value="All">All</mat-option> -->
-                        <mat-option *ngFor="let s of supplierList  let i = index;" value="{{s.ID}}">
+                        <mat-option>
+                            <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                            </ngx-mat-select-search>
+                        </mat-option>
+                        <mat-option *ngFor="let s of supplierList | ponamefilter: searchValue  let i = index;" value="{{s.ID}}">
                             {{s.Name}}
                         </mat-option>
                     </mat-select>
