--- a/web1/src/app/sale/commission/commission.component.html
+++ b/web1/src/app/sale/commission/commission.component.html
@@ -25,7 +25,11 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payee Name</mat-label>
                                         <mat-select name="PayeeID" [(ngModel)]=" data.PayeeName"  >
-                                            <mat-option [value]="s.ID" *ngFor="let s of payeeList">
+                                            <mat-option>
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                </ngx-mat-select-search>
+                                            </mat-option>
+                                            <mat-option [value]="s.ID" *ngFor="let s of payeeList | nameFilterS: searchValue ">
                                                 {{s.Name}} 
                                                 <span style="float: right;">{{s.MobileNo1}}</span>
                                             </mat-option>
