--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -6,17 +6,17 @@
                 <div class="card">
                     <div class="header">
                         <div class="row">
-                            <div class="col-md-1 col-5">
+                            <div class="col-lg-1 col-md-2 col-5">
                                 <h4>Customer Info </h4>
                             </div>
-                            <div class="col-md-2 col-7 mr-md-2 mr-0 "
+                            <div class="col-lg-2 col-md-4 col-7 mr-md-2 mr-0 ms-md-auto"
                                 style="display: inherit; height: 20px;margin-top: 1px;color: black;">
                                 <label style="font-size: 14px; margin-right:10px">Visit Date </label>
                                 <input style="border-bottom: 1px solid; height: 19px;width: 95px;" matInput
                                     name="VisitDate" type="date" [(ngModel)]="data.VisitDate">
                                 <button class="extra" (click)="openModal(customer)">EXT</button>
                             </div>
-                            <div class="col-md-6 col-12 ms-auto">
+                            <div class="col-lg-6 col-md-12 col-12 ms-auto d-lg-block d-none">
                                 <!-- nav-tabs start -->
                                 <ul class="nav nav-tabs mb-3" id="ex1" role="tablist"
                                     style="justify-content: space-between;">
@@ -56,9 +56,9 @@
                         <form #f="ngForm" autocomplete="off">
                             <div class="row">
                                 <!-- Customer from start  -->
-                                <div class="col-md-6 col-12">
+                                <div class="col-lg-6 col-md-12 col-12">
                                     <div class="row">
-                                        <div class="col-xl-2 col-lg-2 col-md-6 col-sm-2 col-2 mb-0">
+                                        <div class="col-xl-2 col-lg-2 col-md-3  col-4 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Select Position </mat-label>
                                                 <mat-select name="Position" [(ngModel)]="data.Gender" #Gendercontrol>
@@ -69,7 +69,7 @@
                                                 </mat-select>
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-10 col-10 mb-0">
+                                        <div class="col-xl-3 col-lg-3 col-md-3  col-8 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label> Name</mat-label>
                                                 <input matInput min="3" [(ngModel)]="data.Name" name="Name"
@@ -88,21 +88,21 @@
                                                     </div>
                                                 </div>
                                         </div>
-                                        <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-4 mb-0">
+                                        <div class="col-xl-2 col-lg-2 col-md-3  col-4 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Mobile No1</mat-label>
                                                 <input matInput name="MobileNo1" type="number"
                                                     [(ngModel)]="data.MobileNo1"  (input)="customerSearch(MobileNo1control.value, 'MobileNo1')" #MobileNo1control />
                                             </mat-form-field> 
                                         </div>
-                                        <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-4 mb-0">
+                                        <div class="col-xl-2 col-lg-2 col-md-3  col-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>DOB</mat-label>
                                                 <input matInput name="DOB" type="date" [(ngModel)]="data.DOB"
                                                     (change)="calculateAge()">
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-xl-1 col-lg-1 col-md-1 col-sm-3 mb-0">
+                                        <div class="col-xl-1 col-lg-1 col-md-3  col-2 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Age</mat-label>
                                                 <input matInput name="Age" type="number" min="0" [(ngModel)]="data.Age">
@@ -111,14 +111,14 @@
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-4  mb-0">
+                                        <div class="col-xl-2 col-lg-2 col-md-3  col-3  mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Anniversary</mat-label>
                                                 <input matInput name="Anniversary" type="date"
                                                     [(ngModel)]="data.Anniversary">
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-xl-5 col-lg-5 col-md-6 col-sm-12 mb-0">
+                                        <div class="col-xl-5 col-lg-5 col-md-3  col-12 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Address</mat-label>
                                                 <input matInput name="Address" minlength="2" [(ngModel)]="data.Address"
@@ -129,7 +129,7 @@
                                             </mat-form-field>
                                         
                                         </div>
-                                        <div class="col-xl-2 col-lg-2 col-md-6 col-sm-6 col-6 mb-0">
+                                        <div class="col-xl-2 col-lg-2 col-md-3  col-4 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>SR/MRD No. </mat-label>
                                                 <input matInput name="Sno" [(ngModel)]="data.Sno"  (input)="customerSearch(Snocontrol.value, 'Sno')" #Snocontrol />
@@ -138,7 +138,7 @@
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-xl-5 col-lg-5 col-md-6 col-sm-12 mb-0">
+                                        <div class="col-xl-5 col-lg-5 col-md-6  col-8 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Remark/TLN </mat-label>
                                                 <input matInput name="Remarks" [(ngModel)]="data.Remarks"
@@ -148,7 +148,7 @@
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
-                                        <div class="col-xl-5 col-lg-8 col-md-6 col-sm-12 mb-0 ms-auto">
+                                        <div class="col-xl-5 col-lg-8 col-md-6 col-12 mb-0 mb-4 mb-md-0 ms-auto">
                                             <button class="me-2" mat-raised-button color="primary"
                                                 style="padding: 0px 10px;"
                                                 [routerLink]="['/sale/billinglist/',data.ID]">Bill History</button>
@@ -174,7 +174,41 @@
                                 </div>
                                 <!-- Customer from end  -->
                                 <!-- power box start  -->
-                                <div class="col-md-6 col-12">
+                                <div class="col-lg-6 col-md-12 col-12 ms-auto d-lg-none d-block">
+                                    <!-- nav-tabs start -->
+                                    <ul class="nav nav-tabs mb-3" id="ex1" role="tablist"
+                                        style="justify-content: space-between;">
+    
+                                        <li class="nav-item d-flex" role="presentation" (click)="specCheck('spec')">
+                                            <mat-checkbox class="example-margin ps-1" color="primary"
+                                            name="SpectacleCheck"  [(ngModel)]="Check.SpectacleCheck"
+                                                style="position: absolute;z-index: 9; cursor: pointer;"> </mat-checkbox>
+                                            <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="tab"
+                                                href="#ex1-tabs-1" role="tab" aria-controls="ex1-tabs-1"
+                                                aria-selected="true">Spectacle Rx </a>
+                                        </li>
+                                        <li class="nav-item d-flex" role="presentation" (click)="specCheck('con')">
+                                            <mat-checkbox class="example-margin ps-1" color="primary"
+                                              name="ContactCheck"  [(ngModel)]="Check.ContactCheck"
+                                                style="position: absolute; z-index: 9;cursor: pointer;"></mat-checkbox>
+                                            <a class="nav-link" id="ex1-tab-2" data-mdb-toggle="tab" href="#ex1-tabs-2"
+                                                role="tab" aria-controls="ex1-tabs-2" aria-selected="false">Contact Rx</a>
+                                        </li>
+                                        <li class="nav-item d-flex" role="presentation" (click)="specCheck('other')">
+                                            
+                                            <mat-checkbox class="example-margin ps-1" color="primary"
+                                            name="OtherCheck" [(ngModel)]="Check.OtherCheck"
+                                                style="position: absolute; z-index: 9;cursor: pointer;"></mat-checkbox>
+                                                
+                                            <a class="nav-link" id="ex1-tab-3" data-mdb-toggle="tab" href="#ex1-tabs-3"
+                                                role="tab" aria-controls="ex1-tabs-3" aria-selected="false">Other Rx</a>
+                                                
+                                        </li>
+    
+                                    </ul>
+                                    <!-- nav-tabs end -->
+                                </div>
+                                <div class="col-lg-6 col-md-12 col-12">
                                     <div class="row p-0 m-0">
                                         <!-- Tabs content -->
                                         <div class="tab-content mt-1 p-0 pe-2 ps-0 mostly-customized-scrollbar"
